# asbestos-dashboard-data

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: update.yml
asbestos_dashboard_data/: __init__.py  __main__.py  aws.py  scrape.py
asbestos_dashboard_data/data/: __init__.py  asbestos.py  schools.py
data/interim/: crosswalk.xlsx  fuzzy_matches.xlsx  geocoded_addresses.xlsx  known_missing_matches.xlsx  manual_geocoded_addresses.xlsx  missing_geocoded_addresses.xlsx  new_data.xlsx  permit-number-urls.csv
data/processed/: asbestos-data.geojson  schools.geojson
data/raw/: CitizenserveReport-Latest.xlsx
data/raw/schools/: 2017-2018 Master School List (20180611).xlsx  2018-2019 Master School List (20190510).csv  2019-2020 Master School List (20201123).csv  Longitudinal School List (20171128).xlsx  schools-combined.csv
